Fix styling issues on safari

--- a/src/loading-screen-styles.css
+++ b/src/loading-screen-styles.css
@@ -30,7 +30,7 @@ main > .loading-screen-container {
   -webkit-background-clip: text;
   background-clip: text;
   background-position-x: -100vw;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 30vh;
   overflow: hidden;
   user-select: none;
