--- a/src/style.css
+++ b/src/style.css
@@ -480,8 +480,8 @@ main > .about-section {
   padding: .75rem 1rem;
   text-align: center;
   box-shadow: 0 1px 2px 0 rgba(255, 255, 255, .8);
-  text-decoration: none #D1D5DB solid;
-  text-decoration-thickness: auto;
+  -webkit-text-decoration: none;
+  text-decoration: none;
   cursor: pointer;
   user-select: none;
   transition: background-color .1s;
@@ -571,6 +571,7 @@ main > .contact-section {
   text-align: center;
   margin: 50px 0;
   font-family: "Indivisible", "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
   background: linear-gradient(to bottom, #fdf8c6, #c78d3e);
   -webkit-background-clip: text;
   color: transparent;
